Languages selection to model view and allow language selection from that set

--- a/src/components/common/historyModal.html
+++ b/src/components/common/historyModal.html
@@ -20,7 +20,7 @@
         <div ng-if="ctrl.selection">
           <div float="top-actions-placeholder">
             <div class="top-actions">
-              <model-language-chooser></model-language-chooser>
+              <model-language-chooser languages="ctrl.model.language"></model-language-chooser>
               <export entity="ctrl.selection"></export>
             </div>
           </div>
