--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -1,7 +1,7 @@
 <form name="form" class="editable-form">
   <fieldset ng-disabled="ctrl.persisting">
     <div ng-if="ctrl.predicate && ctrl.model">
-      <selection-view editable-controller="ctrl" show="ctrl.show">
+      <selection-view model="ctrl.model" editable-controller="ctrl" show="ctrl.show">
         <selection-buttons>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.predicate"></export>
           <history model="ctrl.model" resource="ctrl.predicate" ng-hide="ctrl.isEditing()"></history>
