--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -17,6 +17,7 @@
     <li ng-message="unknownNS">{{'Unknown namespace' | translate}}</li>
     <li ng-message="idNameRequired">{{'Id name is required' | translate}}</li>
     <li ng-message="mustBeRequiredNS">{{'Must be required namespace' | translate}}</li>
+    <li ng-message="languageCode">{{'Is not valid language code' | translate}}</li>
 
     <li ng-message-exp="error.key" ng-repeat="error in dynamicErrors">{{error.message | translate}} {{error.format}}</li>
   </ul>
