--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -10,7 +10,7 @@
 
   <div ng-hide="ctrl.show === 2">
     <div float="top-actions-placeholder">
-      <editable-entity-buttons editable-controller="ctrl.editableController">
+      <editable-entity-buttons languages="ctrl.model.language" editable-controller="ctrl.editableController">
         <div ng-transclude="buttons"></div>
       </editable-entity-buttons>
     </div>
