--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -17,6 +17,8 @@
     <state-select id="modelState" state="ctrl.model.state" model="ctrl.model"></state-select>
   </editable>
 
+  <editable-multiple-language-select title="Model languages" id="modelLanguage" ng-model="ctrl.model.language"></editable-multiple-language-select>
+
   <editable-root-class ng-if="ctrl.model.isOfType('profile')" model="ctrl.model"></editable-root-class>
 
   <relations-view model="ctrl.model"></relations-view>
