--- a/src/components/form/modelLanguageChooser.html
+++ b/src/components/form/modelLanguageChooser.html
@@ -3,6 +3,6 @@
     {{ctrl.localizeLanguageName(ctrl.language)}} <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-    <li role="menuitem" ng-repeat="language in ctrl.languages track by language"><a ng-click="ctrl.language = language">{{ctrl.localizeLanguageName(language)}}</a></li>
+    <li role="menuitem" ng-repeat="language in ctrl.context.language track by language"><a ng-click="ctrl.language = language">{{ctrl.localizeLanguageName(language)}}</a></li>
   </ul>
 </div>
