--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,39 +1,39 @@
 <h4>{{ctrl.predicate.normalizedType + ' information' | capitalize | translate}}</h4>
 
-<editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" autofocus>
-  <input id="predicateName" class="form-control" type="text" localized-input="label" ng-model="ctrl.predicate.label" />
+<editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
+  <input id="predicateName" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.predicate.label" />
 </editable>
 
-<editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}">
+<editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" context="ctrl.model">
   <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.id" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
-<editable data-title="Description">
-  <textarea id="predicateComment" class="form-control" localized-input ng-model="ctrl.predicate.comment"></textarea>
+<editable data-title="Description" context="ctrl.model">
+  <textarea id="predicateComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.predicate.comment"></textarea>
 </editable>
 
-<editable data-title="{{'Super' + ctrl.predicate.normalizedType}}" link="ctrl.linkToSuperproperty()">
+<editable data-title="{{'Super' + ctrl.predicate.normalizedType}}" link="ctrl.linkToSuperproperty()" context="ctrl.model">
   <uri-select id="superPredicate" type="{{ctrl.predicate.normalizedType}}" uri="ctrl.predicate.subPropertyOf" model="ctrl.model"></uri-select>
 </editable>
 
 <editable-multiple-uri-select id="equivalentProperty" type="{{ctrl.predicate.normalizedType}}" ng-model="ctrl.predicate.equivalentProperties" model="ctrl.model" data-title="{{'Equivalent ' + ctrl.predicate.normalizedType}}"></editable-multiple-uri-select>
 
-<editable ng-if="ctrl.predicate.isAttribute()" data-title="Range" name="Range">
+<editable ng-if="ctrl.predicate.isAttribute()" data-title="Range" name="Range" context="ctrl.model">
   <range-select id="predicateRange" range="ctrl.predicate.dataType"></range-select>
 </editable>
 
-<editable ng-if="ctrl.predicate.isAssociation()" data-title="Value class" name="Value class" link="ctrl.linkToValueClass()">
+<editable ng-if="ctrl.predicate.isAssociation()" data-title="Value class" name="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
   <uri-select id="predicateValueClass" type="class" uri="ctrl.predicate.valueClass" model="ctrl.model"></uri-select>
 </editable>
 
 <defined-by entity="ctrl.predicate" model="ctrl.model"></defined-by>
 
-<editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.predicate.unsaved">
+<editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.predicate.unsaved" context="ctrl.model">
   <state-select id="predicateState" state="ctrl.predicate.state" model="ctrl.model"></state-select>
 </editable>
 
-<editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.normalizedType}}" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
+<editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.normalizedType}}" subject="ctrl.predicate.subject" context="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
 
 <h4 translate>Additional information</h4>
 
-<usage-panel entity="ctrl.predicate"></usage-panel>
+<usage-panel entity="ctrl.predicate" context="ctrl.model"></usage-panel>
