--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -5,23 +5,23 @@
           ng-disabled="!ctrl.inUnstableState"
           ng-click="editableController.removeProperty(ctrl.property)" translate>Delete property</button>
 
-  <editable data-title="Class property label">
-    <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" ng-model="ctrl.property.label" />
+  <editable data-title="Class property label" context="ctrl.model">
+    <input id="{{ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyLabels" localized-input="label" context="ctrl.model" ng-model="ctrl.property.label" />
   </editable>
 
-  <editable data-title="Description">
-    <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input ng-model="ctrl.property.comment"></textarea>
+  <editable data-title="Description" context="ctrl.model">
+    <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
   </editable>
 
-  <editable data-title="State" value-as-localization-key="true">
+  <editable data-title="State" value-as-localization-key="true" context="ctrl.model">
     <state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></state-select>
   </editable>
 
-  <editable ng-if="ctrl.property.normalizedPredicateType === 'attribute' || ctrl.predicate.isAttribute()" data-title="Range">
+  <editable ng-if="ctrl.property.normalizedPredicateType === 'attribute' || ctrl.predicate.isAttribute()" data-title="Range" context="ctrl.model">
     <range-select id="{{ctrl.property.internalId + 'range'}}" range="ctrl.property.dataType"></range-select>
   </editable>
 
-  <editable ng-if="ctrl.property.normalizedPredicateType === 'association' || ctrl.predicate.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()">
+  <editable ng-if="ctrl.property.normalizedPredicateType === 'association' || ctrl.predicate.isAssociation()" data-title="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
     <uri-select id="{{ctrl.property.internalId + 'valueClass'}}" type="class" uri="ctrl.property.valueClass" mandatory="!ctrl.inUnstableState" model="ctrl.model"></uri-select>
   </editable>
 
@@ -39,44 +39,44 @@
            || ctrl.property.maxCount
     ">Optional metadata</h4>
 
-  <editable data-title="Class property id">
+  <editable data-title="Class property id" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="ctrl.property.externalId" />
   </editable>
 
-  <editable data-title="Example">
+  <editable data-title="Example" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.example" />
   </editable>
 
   <editable-multiple-data-type-input data-title="Allowed values" id="{{ctrl.property.internalId + 'allowedValues'}}" input-type="{{ctrl.property.inputType}}" ng-model="ctrl.property.in"></editable-multiple-data-type-input>
 
-  <editable data-title="Default value">
+  <editable data-title="Default value" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.defaultValue" />
   </editable>
 
-  <editable data-title="Fixed value">
+  <editable data-title="Fixed value" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'hasValue'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.hasValue" />
   </editable>
 
-  <editable ng-if="ctrl.normalizedPredicateType === 'attribute' || ctrl.predicate.isAttribute()" data-title="Pattern">
+  <editable ng-if="ctrl.normalizedPredicateType === 'attribute' || ctrl.predicate.isAttribute()" data-title="Pattern" context="ctrl.model">
     <input id="{{ctrl.property.internalId + 'pattern'}}" class="form-control" type="text" ng-model="ctrl.property.pattern" />
   </editable>
 
   <div class="clearfix">
-    <editable data-title="Min length" class="range-input">
+    <editable data-title="Min length" class="range-input" context="ctrl.model">
       <input id="{{ctrl.property.internalId + 'minLength'}}" min-input max="ctrl.property.maxLength" class="form-control" type="number" ng-model="ctrl.property.minLength" />
     </editable>
 
-    <editable data-title="Max length" class="range-input">
+    <editable data-title="Max length" class="range-input" context="ctrl.model">
       <input id="{{ctrl.property.internalId + 'maxLength'}}" max-input min="ctrl.property.minLength" class="form-control" type="number" ng-model="ctrl.property.maxLength" />
     </editable>
   </div>
 
   <div class="clearfix">
-    <editable data-title="Min count" class="range-input">
+    <editable data-title="Min count" class="range-input" context="ctrl.model">
       <input id="{{ctrl.property.internalId + 'minCount'}}" placeholder="0" min-input max="ctrl.property.maxCount" class="form-control" type="number" ng-model="ctrl.property.minCount" />
     </editable>
 
-    <editable data-title="Max count" class="range-input">
+    <editable data-title="Max count" class="range-input" context="ctrl.model">
       <input id="{{ctrl.property.internalId + 'maxCount'}}" placeholder="*" max-input min="ctrl.property.minCount" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
     </editable>
   </div>
@@ -89,13 +89,13 @@
         <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
       </uib-accordion-heading>
       <div ng-if="ctrl.predicate">
-        <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id"></non-editable>
-        <non-editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" value="ctrl.predicate.label"></non-editable>
-        <non-editable data-title="Description" value="ctrl.predicate.comment"></non-editable>
-        <non-editable data-title="Predicate type" value="ctrl.predicate.normalizedType" value-as-localization-key="true"></non-editable>
-        <non-editable data-title="Range" value="ctrl.predicate.range"></non-editable>
+        <non-editable data-title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}" value="ctrl.predicate.id" context="ctrl.model"></non-editable>
+        <non-editable data-title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}" value="ctrl.predicate.label" context="ctrl.model"></non-editable>
+        <non-editable data-title="Description" value="ctrl.predicate.comment" context="ctrl.model"></non-editable>
+        <non-editable data-title="Predicate type" value="ctrl.predicate.normalizedType" value-as-localization-key="true" context="ctrl.model"></non-editable>
+        <non-editable data-title="Range" value="ctrl.predicate.range" context="ctrl.model"></non-editable>
         <defined-by entity="ctrl.predicate" model="ctrl.model"></defined-by>
-        <subject-view subject="ctrl.predicate.subject"></subject-view>
+        <subject-view subject="ctrl.predicate.subject" context="ctrl.model"></subject-view>
       </div>
       <div ng-if="!ctrl.predicate" translate>Predicate information not found</div>
     </uib-accordion-group>
