--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -2,7 +2,7 @@
   <div class="component-header">
     <h3>
       <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
-      <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel}}</span>
+      <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel: ctrl.model}}</span>
       <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="ctrl.show === 0" ng-click="ctrl.enlargeSelection()"></span>
       <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="ctrl.show === 1" ng-click="ctrl.shrinkSelection()"></span>
     </h3>
@@ -10,7 +10,7 @@
 
   <div ng-hide="ctrl.show === 2">
     <div float="top-actions-placeholder">
-      <editable-entity-buttons languages="ctrl.model.language" editable-controller="ctrl.editableController">
+      <editable-entity-buttons context="ctrl.model" editable-controller="ctrl.editableController">
         <div ng-transclude="buttons"></div>
       </editable-entity-buttons>
     </div>
