--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -2,18 +2,18 @@
 
   <h4>{{ctrl.model.normalizedType + ' information' | capitalize | translate}}</h4>
 
-  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}" autofocus>
-    <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" ng-model="ctrl.model.label" />
+  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
+    <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" context="ctrl.model" ng-model="ctrl.model.label" />
   </editable>
 
-  <non-editable data-title="Namespace" value="ctrl.model.namespace"></non-editable>
-  <non-editable data-title="Prefix" value="ctrl.model.prefix"></non-editable>
+  <non-editable data-title="Namespace" value="ctrl.model.namespace" context="ctrl.model"></non-editable>
+  <non-editable data-title="Prefix" value="ctrl.model.prefix" context="ctrl.model"></non-editable>
 
-  <editable data-title="Description">
-    <textarea id="modelComment" class="form-control" localized-input ng-model="ctrl.model.comment"></textarea>
+  <editable data-title="Description" context="ctrl.model">
+    <textarea id="modelComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.model.comment"></textarea>
   </editable>
 
-  <editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
+  <editable data-title="State" value-as-localization-key="true" context="ctrl.model" ng-if="!ctrl.model.unsaved">
     <state-select id="modelState" state="ctrl.model.state" model="ctrl.model"></state-select>
   </editable>
 
@@ -25,7 +25,7 @@
 </div>
 
 <div class="col-md-5 col-md-offset-1">
-  <references-view references="ctrl.model.references"></references-view>
+  <references-view model="ctrl.model"></references-view>
   <requires-view model="ctrl.model"></requires-view>
 
   <h4 translate>Additional information</h4>
