--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -1,15 +1,15 @@
 <h4 translate>References</h4>
 
-<p ng-if="ctrl.references.length === 0" translate>No references yet</p>
+<p ng-if="ctrl.model.references.length === 0" translate>No references yet</p>
 
 <uib-accordion>
-  <uib-accordion-group ng-repeat="reference in ctrl.references | orderBy: ctrl.referenceComparator track by reference.id.value" is-open="ctrl.opened[reference.id]">
+  <uib-accordion-group ng-repeat="reference in ctrl.model.references | orderBy: ctrl.referenceComparator track by reference.id.value" is-open="ctrl.opened[reference.id]">
     <uib-accordion-heading>
-      <span accordion-chevron is-open="ctrl.opened[reference.id]">{{reference | translateLabel}}</span>
+      <span accordion-chevron is-open="ctrl.opened[reference.id]">{{reference | translateLabel: ctrl.model}}</span>
     </uib-accordion-heading>
     <div ng-if="ctrl.opened[reference.id]">
       <button ng-show="modelViewController.canModify() && !reference.isLocal()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
-      <non-editable data-title="Vocabulary id" value="reference.vocabularyId"></non-editable>
+      <non-editable data-title="Vocabulary id" value="reference.vocabularyId" context="ctrl.model"></non-editable>
     </div>
   </uib-accordion-group>
 </uib-accordion>
