Allow sorting of editable multiple by drag'n'drop
Closes #371

--- a/src/components/editor/editableMultiple.html
+++ b/src/components/editor/editableMultiple.html
@@ -8,9 +8,15 @@
 
   <div ng-show="ctrl.isEditing()">
     <div class="form-control multi-input">
-      <div ng-repeat="value in ctrl.ngModel" ng-class="['added-item', { 'has-error': !ctrl.isValid(value)}]">
-        {{ctrl.format(value)}}
-        <div class="delete-item badge" ng-click="ctrl.deleteValue(value)">&times;</div>
+      <div ng-repeat="value in ctrl.ngModel track by $index" class="added-item">
+        <div editable-multiple-droppable="left" class="drop-target" ng-class="ctrl.getDragClasses($index)"></div>
+
+        <div class="box" ng-class="{ 'has-error': !ctrl.isValid(value)}" editable-multiple-draggable editable-multiple-droppable>
+          {{ctrl.format(value)}}
+          <div class="delete-item badge" ng-click="ctrl.deleteValue(value)">&times;</div>
+        </div>
+
+        <div ng-if="$last" editable-multiple-droppable="right" class="drop-target" ng-class="ctrl.getDragClasses($index + 1)"></div>
       </div>
 
       <input name="valueInput"
