--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -104,7 +104,7 @@ $footer-height: 50px;
 
     .box {
       padding: 5px 4px;
-      margin: 5px 0 0 0;
+      margin: 5px 0 0 5px;
       line-height: 12px;
       font-size: 12px;
       background-color: #f5f5f5;
@@ -113,6 +113,21 @@ $footer-height: 50px;
       display: inline-block;
       float: left;
       cursor: move;
+
+      &.dragged.droppable {
+        border-color: black;
+      }
+
+      &.dragged {
+        background-color: $body-bg;
+        border: 1px dashed $alert-warning-border;
+        color: $body-bg;
+
+        .delete-item {
+          background-color: $body-bg;
+          color: $body-bg;
+        }
+      }
 
       &.has-error {
         border-color: $state-danger-text;
