--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,10 +15,13 @@ $brand-primary:         #3F51B5;
 $brand-success:         #43ac6a;
 $brand-info:            #5bc0de;
 $brand-warning:         #E99002;
-$brand-danger:          #F04124;
+$brand-danger:          #D32F2F;
 
 $navbar-margin-bottom:  0 !default;
 $navbar-default-bg:     $brand-primary !default;
+
+$brand-accent-light:    #E8EAF6;
+$brand-accent-dark:     #C5CAE9;
 
 @import './mixin';
 @import '../vendor/variables';
@@ -41,7 +44,7 @@ $versionListWidth: 400px;
 $footer-height: 50px;
 
 .glyphicon.info {
-  color: $brand-info;
+  color: $brand-primary;
   font-size: small;
 }
 
@@ -66,11 +69,16 @@ $footer-height: 50px;
 }
 
 .btn-default {
-  color: #555555;
-  background-color: #e9e9e9;
-  border: none;
+  color: #333;
+  background-color: $brand-accent-light;
+  border: 1px solid $brand-accent-dark;
 }
 
+.btn-default:hover, .btn-default:focus, .btn-default:active {
+  color: #333;
+  background-color: $brand-accent-dark;
+  border: 1px solid $brand-accent-dark;
+}
 
 .multi-input {
   border: 1px solid #ccc;
@@ -793,28 +801,30 @@ modal-body {
     .search-result {
       font-size: small;
       cursor: pointer;
-      background-color: #f5f5f5;
-      border: 1px solid #ddd;
+      border: 1px solid $gray-light;
       margin-bottom: 10px;
       padding-left: 10px;
-      box-shadow: 2px 2px 2px #ddd;
+      box-shadow: 2px 2px 2px #$brand-accent-dark;
 
       &.add-new {
-        border: 1px solid #000;
-        box-shadow: 2px 2px 2px #888888;
+        color: #333;
+        background-color: $brand-accent-light;
+        border: 1px solid $brand-accent-dark;
       }
 
       &.selected {
-        background-color: #ffffff;
+        color: #333;
+        background-color: $brand-accent-light;
+        border: 1px solid $brand-accent-dark;
       }
 
       &.selection {
-        box-shadow: 2px 2px 2px $brand-primary;
+        box-shadow: 2px 2px 2px $brand-accent-dark;
         border-color: $brand-primary;
       }
 
       &.disabled {
-        background-color: #bbb;
+        background-color: $gray-light;
         cursor: not-allowed;
       }
 
